# certbot-dns-pdns

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml
certbot_dns_pdns/: dns_pdns.py
