[tool.poetry]
name = "certbot-dns-pdns"
version = "0.1.0"
description = "DNS Authenticator for certbot using the PowerDNS API"
authors = ["Felix Kaechele <felix@kaechele.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
