[tool.poetry]
name = "certbot-dns-pdns"
version = "0.1.0"
description = "DNS Authenticator for certbot using the PowerDNS API"
authors = ["Felix Kaechele <felix@kaechele.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certbot = ">=2.7.0"
dns-lexicon = ">=3.15.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.9.1"
types-requests = ">=2.31.0.8"
python-semantic-release = ">=8.1.1"

[tool.poetry.plugins."certbot.plugins"]
dns-pdns = "certbot_dns_pdns.dns_pdns:Authenticator"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = "pip install poetry && poetry build"
